# SynonymExtensor

./: .gitignore  Makefile  README.md  setup.cfg
src/SynonymExtensor/: core.py
src/SynonymExtensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/SynonymExtensor/utils/: struct.py
