[metadata]
name = SynonymExtensor
version = 0.0.0
author = Yu-Lun Chiang
author_email = chiangyulun0914@gmail.com
description = SynonymExtensor performs synonym extension for chinese keywords with state-of-the-art transformer models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenyummy/SynonymExtensor.git
download_url = https://github.com/allenyummy/SynonymExtensor/archive/refs/tags/0.0.0.tar.gz
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy == 1.19.5
    torch == 1.7.1
    flair == 0.8.0post1
    transformers == 4.5.0
    ckip-transformers == 0.2.3

[options.packages.find]
where = src
exclude = 
    tests

[options.extras_require]
spa =
    spacy == 3.0.6
    spacy-transformers == 1.0.2
test =
    pytest == 6.2.3
    pytest-mock == 3.5.1
    pytest-cov == 2.11.1
